fix: input and validation spacing, fonts

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,10 +20,9 @@
     // @apply relative;
     position: relative;
     label {
-      @apply absolute bg-darkModeBg text-white text-xs px-1;
+      @apply absolute bg-darkModeBg text-white text-xs px-1 tracking-[0.4px];
       left: 12px;
-      top: -2px;
-      line-height: 0.75rem;
+      top: -9px;
     }
     input {
       @apply w-full bg-transparent outline-none py-[calc(1rem+1px)] px-3 text-white shadow-outline rounded-[8px];
@@ -35,6 +34,7 @@
         }
       }
       &[type='password'] {
+        letter-spacing: 2.15px;
         caret-color: white;
         color: transparent;
       }
